--- a/practical2.html
+++ b/practical2.html
@@ -24,6 +24,6 @@
         different browsers,devices and screen sizes.</p>
         <h3>Output</h3>
         <h3>LIVE PAGE ON GITHUB</h3>
-        <img src="/home/divyam/Pictures/Screenshot from 2020-07-18 21-53-14.png" >
+        <img src="./assets/img3.png" >
 </body>
 </html>
