--- a/practical1.html
+++ b/practical1.html
@@ -24,9 +24,9 @@
         different browsers,devices and screen sizes.</p>
         <h3>Output</h3>
         <h3 style="text-align: center;">Online HTML editor</h3>
-        <img src="/assets/img1.png" alt="Online image">
+        <img src="./assets/img1.png" alt="Online image">
         <br><br>
         <h3 style="text-align: center;">Offline HTML editor</h3>
-        <img src="/assets/img2.png" alt="Offline image">
+        <img src="./assets/img2.png" alt="Offline image">
 </body>
 </html>
