--- a/practical5.html
+++ b/practical5.html
@@ -28,10 +28,10 @@
 <img src="img/menu.jpg" alt="menu" usemap="#menu">
 </center>
 <map name="menu">
-    <area shape="rect" coords="19,8,171,166"  href="pages/html.html" target="_blank">
-    <area shape="circle" coords="287,96,95"  href="pages/css.html" target="_blank">
-    <area shape="rect" coords="24,196,170,335"  href="pages/js.html" target="_blank">
-    <area shape="poly" coords="230,223,289,201,346,223,338,299,288,328,238,301"  href="pages/bootstrap.html" target="_blank">
+    <area shape="rect" coords="19,8,171,166"  href="html.html" target="_blank">
+    <area shape="circle" coords="287,96,95"  href="css.html" target="_blank">
+    <area shape="rect" coords="24,196,170,335"  href="js.html" target="_blank">
+    <area shape="poly" coords="230,223,289,201,346,223,338,299,288,328,238,301"  href="bootstrap.html" target="_blank">
 </map>
 <center>
 <p style="color:red;">Click on any part of logo to know more about the technologies.</p>
