--- a/practical5.html
+++ b/practical5.html
@@ -5,36 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical-5</title>
     <style>
-        body{
-            background-color:lightgrey;
+        h3{
+            color: blue;
+		text-decoration: none;
+		/*text-shadow: rgb(grey);*/
+		text-indent: 100px;
+		letter-spacing: 20px;
+		background-color: #f0e68c; 
+		font-style:normal;  
+		font-size: 30px;
         }
-       
     </style>
 </head>
-<body>
-    <center>
-    <img src="img/MENU.png" alt="nav_bar" usemap="#practical">
-</center>
-<map name="practical">
-    <area shape="rect" coords="22,15,129,46"  href="index.html" target="_blank">
-    <area shape="rect" coords="149,15,341,46"  href="practical1.html" target="_blank">
-    <area shape="rect" coords="362,15,557,46"  href="practical2.html" target="_blank">
-    <area shape="rect" coords="576,15,773,46"  href="practical3.html" target="_blank">
-    <area shape="rect" coords="790,15,996,46"  href="practical4.html" target="_blank">
-    <area shape="rect" coords="1016,15,1209,46"  href="practical5.html" >
-</map>
-<center>
-<h2>Introduction to Front-End Technologies</h2>
-<img src="img/menu.jpg" alt="menu" usemap="#menu">
-</center>
-<map name="menu">
-    <area shape="rect" coords="19,8,171,166"  href="html.html" target="_blank">
-    <area shape="circle" coords="287,96,95"  href="css.html" target="_blank">
-    <area shape="rect" coords="24,196,170,335"  href="js.html" target="_blank">
-    <area shape="poly" coords="230,223,289,201,346,223,338,299,288,328,238,301"  href="bootstrap.html" target="_blank">
-</map>
-<center>
-<p style="color:red;">Click on any part of logo to know more about the technologies.</p>
-</center>
+<body style="background-color: yellow;">
+    <img src="../assets/up.png" alt="Upper menu" height="95 px" width="1059px" usemap="#map1" 
+    style="display: block; margin-left: auto; margin-right: auto; ">
+
+    <map name="map1" >
+        <area shape="rect" coords="10,21,124,68" href="index.html" alt="index" title="Home Page" style="outline: none;">
+        <area shape="rect" coords="139,22,308,65" href="practical1.html" alt="Practical-1" title="Practical-1" style="outline: none;">
+        <area shape="rect" coords="327,21,501,63" href="practical2.html" alt="Practical-2" title="Practical-2" style="outline: none;">
+        <area shape="rect" coords="519,24,676,69" href="practical3.html" alt="Practical-3" title="Practical-3" style="outline: none;">
+        <area shape="rect" coords="691,23,861,67" href="practical4.html" alt="" title="Practical-4" style="outline: none;">
+        <area shape="rect" coords="879,23,1046,68" href="practical5.html" alt="" title="Practical-5" style="outline: none;">
+    </map>
+    <br>
+    <h3 style="text-align: center;">Introduction to Front End technologies: imagemap</h3>
+
+    <br>
+    <br>
+    <img src="../assets/dev1.png" alt="Main" height="350" width="400" usemap="#map2" 
+    style="display:block; margin-left: auto; margin-right: auto;">
+
+    <map name="map2">
+        <area shape="rect" coords="19,9,170,165" href="html.html" alt="" target="_blank" >
+        <area shape="circle" coords="287,95,90" href="css.html" alt="" style="outline: none;">
+        <area shape="rect" coords="23,196,170,336" href="javaScript.html" alt="">
+        <area shape="poly" coords="288,202,346,222,337,300,287,328,240,301,232,223" href="bootstrap.html" alt="" target="_self">
+    </map>
+    <h4 style="text-align: center;">Click on any part of the image to learn more.</h4>
+    <br>
+    <a href="../index.html">Back to index page</a>
+
 </body>
 </html>
