--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li>Live your First Web-Page on Git-Hub.<a href="practical2.html" target="_blank">Practical-2</a></li>
         <li>Create a web page showing basic structure html structure using character Entities and span Tag.<a href="practical3.html" target="_blank">Practical-3</a></li>
         <li>Create a website Having list of all praticals and their individual pratical Page links.<a href="practical4.html">Practical-4</a></li>
+        <li>Create a webpage showing the use of image map.<a href="practical5.html">Practical-5</a></li>
     </ol>
 </body>
 </html>
