--- a/practical5.html
+++ b/practical5.html
@@ -23,7 +23,7 @@
 
     <br>
     <br>
-    <img src="../assets/dev1.png" alt="Main" height="350" width="400" usemap="#map2" 
+    <img src="../assets/dev1.jpg" alt="Main" height="350" width="400" usemap="#map2" 
     style="display:block; margin-left: auto; margin-right: auto;">
 
     <map name="map2">
