--- a/practical5.html
+++ b/practical5.html
@@ -29,7 +29,7 @@
     <map name="map2">
         <area shape="rect" coords="19,9,170,165" href="html.html" alt="" target="_blank" >
         <area shape="circle" coords="287,95,90" href="css.html" alt="" style="outline: none;">
-        <area shape="rect" coords="23,196,170,336" href="javaScript.html" alt="">
+        <area shape="rect" coords="23,196,170,336" href="js.html" alt="">
         <area shape="poly" coords="288,202,346,222,337,300,287,328,240,301,232,223" href="bootstrap.html" alt="" target="_self">
     </map>
     <h4 style="text-align: center;">Click on any part of the image to learn more.</h4>
