--- a/js.html
+++ b/js.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color:rgb(233, 240, 132);">
     <h1 style="text-align: center; color: rgb(126, 105, 12);">Introduction to JavaScript</h1> 
-    <img src="../assests/js.png" alt="" width="50%" style="display: block; margin-left: auto; margin-right: auto;">
+    <img src="../assets/js.png" alt="" width="50%" style="display: block; margin-left: auto; margin-right: auto;">
     <br>
     <p>
             JavaScript (/ˈdʒɑːvəˌskrɪpt/),[6] often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.[7] JavaScript is high-level, often just-in-time compiled, and multi-paradigm. It has curly-bracket syntax, dynamic typing, prototype-based object-orientation, and first-class functions.
