--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li>Create a web page showing basic structure html structure using character Entities and span Tag.<a href="practical3.html" target="_blank">Practical-3</a></li>
         <li>Create a website Having list of all praticals and their individual pratical Page links.<a href="practical4.html">Practical-4</a></li>
         <li>Create a webpage showing the use of image map.<a href="practical5.html">Practical-5</a></li>
+        <li>Creating a website having layout using CSS layout property <a href="practical6.html">Practical-6</a></li>
     </ol>
 </body>
 </html>
