--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <li>Create a website Having list of all praticals and their individual pratical Page links.<a href="practical4.html">Practical-4</a></li>
         <li>Create a webpage showing the use of image map.<a href="practical5.html">Practical-5</a></li>
         <li>Creating a website having layout using CSS layout property <a href="practical6.html">Practical-6</a></li>
+        <li>Creating a web page layout using div tags. <a href="practical7.html">Practical-7</a></li>
+
     </ol>
 </body>
 </html>
