--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li>Create a webpage showing the use of image map.<a href="practical5.html">Practical-5</a></li>
         <li>Creating a website having layout using CSS layout property <a href="practical6.html">Practical-6</a></li>
         <li>Creating a web page layout using div tags. <a href="practical7.html">Practical-7</a></li>
+        <li>Created a webpage layout with content and fix navigation bar: <a href="practical8.html">Practical-8</a></li>
 
     </ol>
 </body>
