--- a/practical8.html
+++ b/practical8.html
@@ -149,15 +149,15 @@
     </navbar>
 
     <!-- front image of page -->
-    <a name="top"><img id="front-image" src="images\front image.jpg"></a>
+    <a name="top"><img id="front-image" src="./assets/m.jpg"></a>
 
     <!-- team details -->
     <a name="team"><h1>Team Members</h1></a>
     <div id="photos">
-        <img src="images\member-1.png">
-        <img src="images\member-2.png">
-        <img src="images\member-3.png">
-        <img src="images\member-4.png">
+        <img src="./assets/1.png">
+        <img src="./assets/2.png">
+        <img src="./assets/3.png">
+        <img src="./assets/4.png">
     </div>
 
     <!-- about us section -->
@@ -165,12 +165,12 @@
         <a name="about"><h1>About us</h1></a>
         <div id="left">
             <p class="para" style="font-size: 130%;">About Projects</p>
-            <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime consequuntur sapiente explicabo neque quos ab reiciendis earum quaerat placeat beatae dignissimos provident eius laborum, quo saepe odit natus est deleniti eligendi optio nemo commodi laudantium. Sed accusantium porro inventore corrupti perferendis saepe! Harum, eveniet. Aperiam, eligendi. Repellendus autem labore commodi quo magni nesciunt, dolor sint, dolore consequatur quia error natus vero debitis! Recusandae culpa temporibus voluptatem, quod inventore fuga cupiditate maiores, nulla error autem eveniet? Quibusdam delectus corporis, molestiae porro, unde dolores recusandae natus veniam reiciendis illo facere tempore! Ea esse consequatur officia incidunt, eum commodi placeat eligendi laudantium asperiores voluptates impedit a animi ad, dicta sint odio. Dicta architecto cupiditate repellendus porro eveniet nobis vitae rem. Harum excepturi velit repudiandae vitae, recusandae totam eos nulla blanditiis nesciunt molestiae atque dicta, perferendis provident alias accusantium dolor nisi assumenda, incidunt minus adipisci nihil ipsum eaque. In enim, quis sit modi cum praesentium esse doloribus totam ducimus nesciunt nemo labore eligendi corrupti, quos consectetur, quae sequi ut officia vero! Aperiam, incidunt illo ipsam nulla quis magni distinctio mollitia dolor amet corporis ullam quisquam omnis voluptate? Corporis soluta tenetur porro sed natus iste accusamus et dicta, iure, aspernatur voluptatum optio repellendus similique nesciunt laboriosam ea nihil eaque numquam molestias aliquam odio eveniet odit. Perferendis nulla rem, quae assumenda commodi autem veritatis voluptatibus minima ullam adipisci quidem, illo nobis ex quas ipsa et. Voluptatibus quisquam, architecto animi eaque exercitationem, facilis adipisci soluta minima ipsa quae dignissimos iure.</p>
+            <p class="para">In the United Kingdom, engineering degrees at universities are either three year BEng (Bachelor of Engineering) or four year MEng (Master of Engineering). In many universities it is common to take only one engineering discipline (e.g. aeronautical or civil engineering) although some universities have a general engineering degree. British universities may also offer Doctoral programs as a doctor of philosophy (PhD) or a doctor of engineering (EngD).Engineers can also get additional recognition in the form of becoming Chartered. A chartered engineer is one who has his degree or doctorate has been recognised by a group of professionals such as the IET (Institute of Engineering and Technology), IMechE (Institution of Mechanical Engineers), IChemE (Institution of Chemical Engineers) or ICE (Institution of Civil Engineers). Experience and responsibility enables a further step of recognition by becoming a Fellow of these institutions.</p>
         </div>
         <div id="right">
-            <img src="images\project-1 image.jpg">
-            <img src="images\project-2 image.jpeg">
-            <img src="images\project-3 image.jpg">
+            <img src="./assets/p1.jpg">
+            <img src="./assets/p2.jpeg">
+            <img src="./assets/p3.jpg">
         </div>
     </div>
 
@@ -179,27 +179,27 @@
     <div id="container">
         <!-- HTML box -->
         <div class="box">
-            <img src="images/html_img.png" alt="HTML image">
+            <img src="./assets/html.png" alt="HTML image">
             <p>HTML stands for Hyper Text Markup Language. It is used to design web pages using markup language ...</p>
-            <a href="introduction_HTML.html" target="_blank">Read more</a>
+            <a href="HTML.html" target="_blank">Read more</a>
         </div>
         <!-- CSS box -->
         <div class="box">
-            <img src="images/css_img.jpg" alt="CSS image">
+            <img src="./assets/css.png" alt="CSS image">
             <p>Cascading Style Sheets, fondly referred to as CSS, is a simply designed language intended ... </p>
-            <a href="introduction_CSS.html" target="_blank">Read more</a>
+            <a href="CSS.html" target="_blank">Read more</a>
         </div>
         <!-- Javascript box -->
         <div class="box">
-            <img src="images/javascript_img.jpg" alt="Javascript image">
+            <img src="./assets/js.png" alt="Javascript image">
             <p>JavaScript is a lightweight, cross-platform and interpreted scripting language. It is well-known for ...</p>
-            <a href="introduction_JS.html" target="_blank">Read more</a>
+            <a href="JS.html" target="_blank">Read more</a>
         </div>
         <!-- Bootstrap box -->
         <div class="box">
-            <img src="images/bootstrap_img.jpg" alt="Bootstrap image">
+            <img src="./assets/bootstrap.jpeg" alt="Bootstrap image">
             <p>Bootstrap is a free and open-source tool collection for creating responsive websites and web applications ...</p>
-            <a href="introduction_bootstrap.html" target="_blank">Read more</a>
+            <a href="bootstrap.html" target="_blank">Read more</a>
         </div>
     </div>
 
