--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <li>Creating a web page layout using div tags. <a href="practical7.html">Practical-7</a></li>
         <li>Created a webpage layout with content and fix navigation bar: <a href="practical8.html">Practical-8</a></li>
         <li> Create a Responsive Web Layout with Responsive Navigation Bar<a href="practical9.html">Practical-9</a></li>
+        <li> Creating a Responsive side Bar<a href="practical10.html">Practical-10</a></li>
+
 
     </ol>
 </body>
