--- a/practical11.html
+++ b/practical11.html
@@ -17,7 +17,7 @@
             border-top: 3px solid black;
             border-right: 3px solid black;
             font-size: 140%;
-            background-color: orange;
+            background-color: red;
             color: white;
         }
         tr:nth-child(2) {
