--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li> Create a Responsive Web Layout with Responsive Navigation Bar<a href="practical9.html">Practical-9</a></li>
         <li> Creating a Responsive side Bar<a href="practical10.html">Practical-10</a></li>
         <li> Create a Table that represent Live Practical Book Records<a href="practical11.html">Practical-11</a></li>
+        <li> Create a Custom Price Table Template.<a href="practical12.html">Practical-12</a></li>
         
 
     </ol>
