--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>main page</title>
 </head>
-<body style="background-color: lightgreen">
+<body style="background-color: orange">
     <h1 style="color:darkblue">Welcome to Fullstack Course</h1>
     <h2>About Course</h2>
     <p>Front-end web development is everything invovled in programming the user interface of a web application.
@@ -30,6 +30,8 @@
         <li> Creating a Responsive side Bar<a href="practical10.html">Practical-10</a></li>
         <li> Create a Table that represent Live Practical Book Records<a href="practical11.html">Practical-11</a></li>
         <li> Create a Custom Price Table Template.<a href="practical12.html">Practical-12</a></li>
+        <li> Create a Responsive Footer Template..<a href="practical13.html">Practical-13</a></li>
+        
         
 
     </ol>
