--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li> Create a Responsive Footer Template..<a href="practical13.html">Practical-13</a></li>
         <li>Create a web-page with responsive form templates <a href="practical14.html">Practical-14</a></li>
         <li>Create a counter with JS<a href="practical15.html">Practical-15</a></li>
+        <li>Create a todo list with JS<a href="practical16.html">Practical-16</a></li>
 
         
 
